# dcli

./: .codecov.yml  CHANGELOG.md  CONFIG_SYNTAX_REFERENCE.fr.md  CONFIG_SYNTAX_REFERENCE.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.fr.md  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/: release-drafter-semver.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  decision.yml  feature.yml  maintenance.yml
.github/workflows/: ci.yml  coverage.yml  mirror.yml  release-drafter-semver.yml  release-drafter.yml
dynamic_cli/: all.html  index.html  sidebar-items.js
dynamic_cli/builder/: index.html  sidebar-items.js  struct.CliApp.html  struct.CliBuilder.html
dynamic_cli/config/: index.html  sidebar-items.js
dynamic_cli/context/: index.html
dynamic_cli/error/: enum.ConfigError.html  enum.DynamicCliError.html  enum.ExecutionError.html  enum.ParseError.html  enum.RegistryError.html  enum.ValidationError.html  fn.display_error.html  fn.find_similar_strings.html  fn.format_error.html  index.html  sidebar-items.js  type.Result.html
dynamic_cli/executor/: index.html
dynamic_cli/help/: index.html  sidebar-items.js  struct.DefaultHelpFormatter.html  trait.HelpFormatter.html
dynamic_cli/interface/: index.html  sidebar-items.js
dynamic_cli/parser/: index.html  sidebar-items.js
dynamic_cli/prelude/: index.html
dynamic_cli/registry/: index.html  sidebar-items.js
dynamic_cli/utils/: fn.detect_type.html  fn.format_bytes.html  fn.format_duration.html  fn.format_numbered_list.html  fn.format_table.html  fn.get_extension.html  fn.has_extension.html  fn.is_blank.html  fn.is_valid_email.html  fn.normalize.html  fn.normalize_path.html  fn.parse_bool.html  fn.parse_float.html  fn.parse_int.html  fn.truncate.html  index.html  sidebar-items.js
dynamic_cli/validator/: index.html  sidebar-items.js
examples/: README.md  file_manager.rs  rpn_calculator.rs  simple_calculator.rs  task_runner.rs
examples/configs/: calculator.yaml  file_manager.yaml  simple_rpn.yaml  task_runner.yaml
search.index/: 0082cb5f0460.js  0147a09892f0.js  021f748d6f11.js  02935178863e.js  03bcce1e9f7e.js  04d6cf20bcad.js  05d5023c1d1f.js  060c772a3b64.js  062ab1c6a3fe.js  06804cbcfc7d.js  072a788786a2.js  07429c424537.js  076d49baf5b1.js  07fb9b7a9ff8.js  09d71df14630.js  0a5700e0ec29.js  0ac6c8cc381b.js  0af7c3be7e7d.js  0b00ab2bbf01.js  0b235e6633d1.js  0bfccf350405.js  0c1bb9489e5f.js  0c28ed4018f4.js  0c98c90f2846.js  0d25ff613705.js  0e26a7a62fae.js  0e289dc16077.js  0e493e085076.js  0f4e6a4ebc7e.js  10338783ad2c.js  10c55c5adb6a.js  10cf565ae2f4.js  118e7fb97862.js  11e5ba877a22.js  126bd4e75332.js  12729ba1b634.js  1279407c061d.js  12b18a8549a1.js  13ff73104549.js  1454f4ec5fce.js  (+217 more)
search.index/crateNames/: 44ba2fab52b3.js
search.index/desc/: 2265503f409b.js  29e636735994.js  68beffcdb2c0.js  c38a2bde94f3.js
search.index/entry/: 208c32517b01.js  718d28e7f1c8.js  b8a61ea34dae.js  edea098cc504.js
search.index/function/: 2447ddeb5ff2.js  3018dfca0333.js  4b553f5d9a09.js  9be11e911d1d.js
search.index/generic_inverted_index/: 0a3711a40c17.js  0b659c419278.js  695af2510d9f.js  ad5c92adfdfc.js
search.index/name/: 111b95e8a05c.js  3e5999c24941.js  4b9dced7a611.js  7b3d56616964.js
search.index/normalizedName/: 4cbaab584208.js  4f3433a0ef71.js  80ef69c6fe69.js  9c2b4fe003b7.js
search.index/path/: 29ae9d268ede.js  4da5c3f942fa.js  70362ab96987.js
search.index/type/: 445abc23455b.js  65234bf3bd39.js  d43f5887c3bd.js  d776bc68dc46.js
src/: builder.rs  lib.rs  utils.rs
src/config/: loader.rs  mod.rs  schema.rs  validator.rs
src/context/: mod.rs  (+1 more)
(+182 files in other folders)
